# SagasuSubs

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
SagasuSubs/: log.py  models.py  patch.py  utils.py
SagasuSubs/api/: __init__.py  __main__.py  auth.py  models.py  utils.py
SagasuSubs/database/: __init__.py  dto.py  entities.py
providers/assrt/: .gitignore  README.md  aria2c.conf  download.ipynb  extract.ipynb  page_parser.py  scrapy.cfg  search_parser.py
providers/assrt/assrt_spider/: items.py  middlewares.py  pipelines.py  settings.py
providers/assrt/assrt_spider/spiders/: assrt_download.py  assrt_search.py
providers/bangumi/bangumi/: items.py  middlewares.py  pipelines.py  settings.py
providers/bangumi/bangumi/spiders/: subject_download.py
providers/sub_share/: .gitignore  README.md  match.ipynb  persist.ipynb  process.ipynb
sub_share/: .gitignore
